--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,11 @@ project(usth-cryptography VERSION 0.1.0 LANGUAGES C CXX)
 include(CTest)
 enable_testing()
 
+add_library(a51 assignment-01/a51.cpp)
 add_library(rsa assignment-03/rsa.cpp)
+
+add_executable(assignment-01-test-parameters assignment-01/tests/test-a51.cpp)
+target_link_libraries(assignment-01-test-parameters PRIVATE a51)
 
 add_executable(assignment-03-test-keygen assignment-03/tests/test_keygen.cpp)
 target_link_libraries(assignment-03-test-keygen PRIVATE rsa)
@@ -17,6 +21,11 @@ target_link_libraries(assignment-03-test-parameters-01 PRIVATE rsa PUBLIC fmt)
 
 add_executable(assignment-03-test-parameters-02 assignment-03/tests/test_rsa_03.cpp)
 target_link_libraries(assignment-03-test-parameters-02 PRIVATE rsa PUBLIC fmt)
+
+add_test(
+    NAME assignment-01-test-parameters
+    COMMAND $<TARGET_FILE:assignment-01-test-parameters>
+)
 
 add_test(
     NAME assignment-03-test-keygen
